# Modular-Rust-Learning

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Readme.md  SECURITY.md  clean.sh  colors.rs  in.md
.github/: FUNDING.yml
.github/workflows/: CI.yml
DesignModule04/: Observer.rs  Singleton.rs
DesignModule04/StockMarket/: notion_checklist.json
DesignModule04/config_man/: Readme.md
GithubRepoTalker/: install.sh  populate.sh
GithubRepoTalker/Talker/: .env  README.md  requirements.txt
Module00/: Cargo.toml  Readme.md
Module00/src/: cli.rs  main.rs
Module01/SimpleCalc/: Cargo.toml  EdgeCaseFix.md  Readme.md
Module01/Todo/: Cargo.toml  Readme.md
Module01/error/: Cargo.toml  Readme.md
Module01/simple_calc/: Cargo.toml
Module02/Auth/: .env  Cargo.toml
Module02/Auth/src/: auth.rs  errors.rs  jwt.rs  main.rs  model.rs  routes.rs
Module02/Chatbot/: .gitignore  Cargo.toml  Readme.md  chatbot_responses.json
Module02/Web/: .gitignore  Cargo.toml
Module02/Web1/: .gitignore  Cargo.toml  Readme.md
Module02/Web2/: .gitignore  404.html  Cargo.toml  Readme.md  hello.html
Module02/Web3/: Cargo.toml
Module02/auth_server/: .gitignore  Cargo.toml  Readme
Module02/gitCheck/: .gitignore  Cargo.toml  Readme.md
Module03/PaymentGateway/: Cargo.toml  Dockerfile
Module03/PaymentGateway/.github/workflows/: ci.yml
Module03/PaymentGateway/benches/: benchmark.rs
Module03/PaymentGateway/src/: main.rs
Module03/PaymentGateway/src/auth/: Readme.md  middleware.rs  mod.rs  tests.rs
Module03/PaymentGateway/src/notification/: mod.rs
Module03/PaymentGateway/src/payment/: mod.rs
Module03/PaymentGateway/src/transaction/: mod.rs
Module03/data_vault/: Cargo.toml
Module03/data_vault_ex/: Cargo.toml  Readme.md
Module03/data_vault_exx/: Cargo.toml  Explanation.md  Explanations.md
Module03/data_vault_exxx/: Cargo.toml
Module03/data_vault_exxx/src/: errors.rs  gui.rs  main.rs  utils.rs  vault.rs
Module03/task_management/: .env  Cargo.toml
Module03/zip_cracker/: .gitignore  (+1 more)
Module05/: Readme.md
Module06_Macro/: Readme.md
Module08_DataStructure/key_value/: Cargo.toml
Module08_DataStructure/key_value/src/: lib.rs  main.rs
Module08_DataStructure/key_value/tests/: integration_tests.rs
Module08_DataStructure/webserv/: Cargo.toml
Module08_DataStructure/webserv/src/: config.rs  error.rs  lib.rs  main.rs
Module08_DataStructure/webserv/src/middleware/: metrics.rs
Module08_DataStructure/webserv/src/routes/: health.rs
Module09/: .env  Dockerfile
Module09/rust_backend/: Cargo.toml
Module09/rust_backend/src/: config.rs  errors.rs  main.rs
Module09/rust_backend/src/'db/: create_users_table.sql
Module09/rust_backend/src/handlers/: auth.rs
Module09/rust_backend/src/middleware/: auth.rs
Module09/rust_backend/src/models/: user.rs
Module09/rust_backend/src/nginx/: backend.conf
Module10/performanceCheck/: Cargo.toml  Readme.md
Module10/performanceCheck/benches/: fibonacci_benchmark.rs  sort_bench.rs
RetroSpy/: package-lock.json  package.json  webpack.config.js
(+155 files in other folders)
