[package]
name = "Auth"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "7.2"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
log = "0.4.22"
dotenv = "0.15.0"
env_logger = "0.11.5"
pretty_env_logger = "0.5.0"
chrono = "0.4.38"
