[package]
name = "PaymentGateway"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.3"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.8.0"
clippy = "0.0.302"
derive = "1.0.0"
jsonwebtoken = "9.3.0"
rustfmt = "0.10.0"
serde = "1.0.204"
serde_json = "1.0.122"
thread_local = "1.1.4"

