[package]
name = "data_vault_exxx"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17.3"
termion = "2.0.1"
rand_core = "0.6.4"
rand = "0.8.5"
egui = "0.28.1"
eframe = "0.28.1"
thiserror = "1.0.63"
epi = "0.17.0"
log = "0.4.22"
env_logger = "0.11.5"
arboard = "3.4.0"

