[package]
name = "webserv"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = "0.7.7"
chrono = "0.4.38"
config = "0.14.1"
dotenv = "0.15.0"
metrics = "0.24.0"
metrics-exporter-prometheus = "0.16.0"
serde = "1.0.213"
serde_json = "1.0.132"
thiserror = "1.0.65"
tokio = "1.41.0"
tower = "0.5.1"
tower-http = "0.6.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.11.0"
