[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
bcrypt = "0.15.1"
chrono = "0.4.38"
config = "0.14.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
log = "0.4.22"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = "0.8.2"
thiserror = "1.0.64"
tokio = "1.40.0"
uuid = "1.10.0"



[dev-dependencies]
actix-rt = "2.8"
