[package]
name = "performanceCheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

lazy_static = "1.5.0"
rand = "0.8.5"

[[bench]]
name = "fibonacci_benchmark"
harness = false
